--- a/conf/config.py.sample
+++ b/conf/config.py.sample
@@ -35,7 +35,7 @@ class Config(object):
     PORT = 18080
     PROTOCOL = u'http'
     LOGFILE = u'debug.log'
-    AUTH_TOKEN_HEADER_NAME = u'sth-key'
+    AUTH_TOKEN_HEADER_NAME = u'Sth-key'
     AUTH_TOKEN = u'test123456'
     USER_HOME_PATH = u'/home'
     SSH = u"/usr/bin/ssh"
